[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Violetta L"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
